--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es2020",
     "module": "commonjs",
     "outDir": "dist",
-    "rootDir": "bin",
+    "rootDirs": ["bin", "lib"],
     "strict": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
@@ -11,7 +11,7 @@
     "sourceMap": true
   },
   "include": [
-    "bin/**/*.ts"
+    "bin/**/*.ts",
   ],
   "exclude": [
     "node_modules"
