--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   "dependencies": {
     "chalk": "4.1.2",
     "commander": "^12.0.0",
-    "inquirer": "^9.2.16"
+    "download-git-repo": "^3.0.2",
+    "inquirer": "8.2.6",
+    "ora": "^8.0.1"
   },
   "devDependencies": {
+    "@types/inquirer": "^9.0.7",
     "@types/node": "^20.11.28",
     "tsup": "^8.0.2",
     "typescript": "^5.4.2"
