feat: create App with template

--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "chalk": "4.1.2",
     "commander": "^12.0.0",
     "download-git-repo": "^3.0.2",
+    "ejs": "^3.1.9",
+    "fast-glob": "^3.3.2",
+    "fs-extra": "^11.2.0",
     "inquirer": "8.2.6",
-    "ora": "^8.0.1"
+    "ora": "5.0.0"
   },
   "devDependencies": {
     "@types/inquirer": "^9.0.7",
