--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@w2xi/migi-cli",
-  "version": "0.0.1",
+  "version": "0.0.2-beta.1",
   "description": "A simple CLI tool to create a new project based on a template",
   "publishConfig": {
     "access": "public",
