--- a/package.json
+++ b/package.json
@@ -39,13 +39,16 @@
     "find-up": "5.0.0",
     "fs-extra": "^11.2.0",
     "inquirer": "8.2.6",
-    "ora": "5.0.0"
+    "ora": "5.0.0",
+    "semver": "^7.6.0",
+    "validate-npm-package-name": "^5.0.0"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.5",
     "@types/fs-extra": "^11.0.4",
     "@types/inquirer": "^9.0.7",
     "@types/node": "^20.11.28",
+    "@types/validate-npm-package-name": "^4.0.2",
     "bumpp": "^9.4.0",
     "tsup": "^8.0.2",
     "typescript": "^5.4.2"
