--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   "scripts": {
     "prepublishOnly": "nr build",
     "dev": "pnpm run build --watch",
-    "build": "tsup bin --dts",
-    "release": "bumpp --commit --push --tag && pnpm publish"
+    "build": "tsup bin --dts --clean",
+    "release": "bumpp --commit --push --tag && pnpm publish",
+    "format": "prettier --write ."
   },
   "keywords": [
     "cli",
@@ -29,6 +30,9 @@
   ],
   "author": "w2xi",
   "license": "MIT",
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "chalk": "4.1.2",
     "commander": "^12.0.0",
@@ -50,6 +54,7 @@
     "@types/node": "^20.11.28",
     "@types/validate-npm-package-name": "^4.0.2",
     "bumpp": "^9.4.0",
+    "prettier": "^3.2.5",
     "tsup": "^8.0.2",
     "typescript": "^5.4.2"
   }
